@@ -3,6 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-12-31 (SVN):
+    * utils, dcc: make sure the progs to be decompiled is of supported
+      version.
+    * utils, hcc: minor whitespace adjustments.
+
 2012-12-27 (SVN):
     * snd_ahi.c (S_AHI_Init): add MEMF_CLEAR to AllocVec flags so that
       the memory is cleared and the loud clicks at startup are no more
